--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: postgres:16-alpine
+    image: postgres:18
     container_name: attendex
     ports:
       - "${DB_PORT}:5432"
